# ydl

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/youtube_dl/: ydl.py
